--- a/src/components/App.css
+++ b/src/components/App.css
@@ -19,4 +19,19 @@ body{
   background-color: aqua;
   padding: 10px;
   border-radius: 100px;
+  margin-top: 10px;
+}
+
+.bay{
+  margin: 10px;
+  box-sizing: border-box;
+  border-radius: 10px;
+  border: 2px solid black;
+}
+
+.parking-lot-container{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
 }
