--- a/src/components/App.css
+++ b/src/components/App.css
@@ -27,6 +27,7 @@ body{
   box-sizing: border-box;
   border-radius: 10px;
   border: 2px solid black;
+  position: relative;
 }
 
 .parking-lot-container{
@@ -34,4 +35,11 @@ body{
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-around;
+}
+
+.bay-name{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
